// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`logs a check for trace 1`] = `
"There has been an unknown error when running the prettier-eslint CLI. If it's unclear to you what went wrong, then try this: 
  ✅  Run the script again with the LOG_LEVEL environment variable set to \\"trace\\"
  2. Search existing issues on GitHub: https://github.com/prettier/prettier-eslint-cli/issues?utf8=%E2%9C%93&q=my%20error
  3. Make a minimal reproduction in a totally separate repository. You can fork this one: https://github.com/kentcdodds/prettier-eslint-cli-repro
  4. Post an issue with a link to your reproduction to the issues on GitHub: https://github.com/prettier/prettier-eslint-cli/issues/new"
`;

exports[`logs all options 1`] = `
"There has been an unknown error when running the prettier-eslint CLI. If it's unclear to you what went wrong, then try this: 
  1. Run the script again with the LOG_LEVEL environment variable set to \\"trace\\"
  2. Search existing issues on GitHub: https://github.com/prettier/prettier-eslint-cli/issues?utf8=%E2%9C%93&q=my%20error
  3. Make a minimal reproduction in a totally separate repository. You can fork this one: https://github.com/kentcdodds/prettier-eslint-cli-repro
  4. Post an issue with a link to your reproduction to the issues on GitHub: https://github.com/prettier/prettier-eslint-cli/issues/new"
`;
